Basic component setup.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Vue renderless component for a contact form.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c --bundleConfigAsCjs"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/trx-base/mqtt-vue-contact-form/issues"
   },
-  "homepage": "https://github.com/trx-base/mqtt-vue-contact-form#readme"
+  "homepage": "https://github.com/trx-base/mqtt-vue-contact-form#readme",
+  "peerDependencies": {
+    "vue": "^3.2.21"
+  },
+  "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.47",
+    "rollup": "^3.18.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-vue": "^6.0.0"
+  }
 }
