--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@trx-base/mqtt-vue-contact-form",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A Vue renderless component for a contact form.",
-  "main": "dist/library.js",
-  "module": "dist/library.mjs",
+  "main": "dist/component.js",
   "files": [
-    "dist/*",
-    "src/*"
+    "dist/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,14 +22,7 @@
     "url": "https://github.com/trx-base/mqtt-vue-contact-form/issues"
   },
   "homepage": "https://github.com/trx-base/mqtt-vue-contact-form#readme",
-  "peerDependencies": {
-    "vue": "^3.2.21"
-  },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.2.47",
-    "browser-sync": "^2.28.3",
-    "rollup": "^3.18.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-vue": "^6.0.0"
+    "browser-sync": "^2.28.3"
   }
 }
