--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
   "homepage": "https://github.com/trx-base/mqtt-vue-contact-form#readme",
   "devDependencies": {
     "browser-sync": "^2.28.3",
+    "eslint": "^8.35.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.9.0",
     "eslit": "^6.0.0"
   }
 }
