Using npm token in Drone script.

--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
   settings:
     username:
       from_secret: npm_username
-    password: 
-      from_secret: npm_password
+    token: 
+      from_secret: npm_token
     email:
       from_secret: npm_email
