--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/trx-base/mqtt-vue-contact-form#readme",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-c8": "^0.29.2",
     "@vue/test-utils": "^2.3.1",
     "browser-sync": "^2.28.3",
     "eslint": "^8.35.0",
@@ -33,9 +35,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.9.0",
     "eslit": "^6.0.0",
-    "vitest": "^0.29.2",
-    "@vitejs/plugin-vue": "^4.0.0",
     "happy-dom": "^8.9.0",
+    "vitest": "^0.29.2",
     "vue": "^3.2.47"
   }
 }
