--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,8 @@ steps:
   image: node
   commands:
     - npm install
-    - npm test
+    - npm run test
+    - npm coverage
 - name: npm
   image: plugins/npm
   settings:
